--- a/mda-report.html
+++ b/mda-report.html
@@ -946,16 +946,7 @@
           customLogic: (cells, idx) =>
             greatestOf(cells[idx - 1].value, cells[idx - 2].value),
         },
-        {
-          customLogic: (cells, idx) =>
-            sumOf(
-              cells[0].value,
-              cells[1].value,
-              cells[4].value,
-              cells[7].value,
-              cells[10].value
-            ),
-        },
+        { customLogic: countIUsWithAtLeastOneResponse },
       ],
     },
 
@@ -1039,7 +1030,7 @@
 
   // Functions
 
-  // Helper functions
+  // Custom logic helper functions
   function greatestOf(...args) {
     const nums = args.filter((n) => !isNaN(n));
     if (!nums.length) return 0;
